# JobHunter

./: .gitignore  Cargo.toml  build.rs  gg.json  haha.c  haha.html  haha.json  hmm.rs  huh.html  job.js  job.json  job_test.txt  jobindex.bash  jobs.json  linkedin.json  linkedin.sh  queue.c  sus.rs  sus.txt  tmp.rs
jobindex_files/: hmm.json
json/src/: de.rs  lib.rs
linkedin_files/: linkedin_data.json  results.json
migrations/: 20251006173927_Create_Job_DB.down.sql  20251006173927_Create_Job_DB.up.sql
src/: main.rs
src/Job_query/: equality.rs  mod.rs
src/Job_query/job_queries/: database.rs  job_constants.rs  job_fetcher.rs  job_index.rs  job_net.rs  job_net_query.rs  jobs.rs  mod.rs  options.rs
src/Job_query/job_queries/job_index/: mod.rs  parser.rs
src/job_fetchers/: job_previewer.rs  jobs.rs  mod.rs  preview.rs  streamer.rs
src/job_fetchers/de/: jobs.rs  mod.rs  preview.rs
src/job_fetchers/job_index/: fetcher.rs  mod.rs  parser.rs  preview.rs  query_maker.rs  streamer.rs
src/services/: doc_service.rs  jobs_service.rs  mod.rs
src/services/database_service/: database.rs  dbtypes.rs  mod.rs  types.rs
src/util/: equality.rs  from_query.rs  mod.rs  options.rs  streamer.rs
