[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
async-trait = "0.1.88"
futures = "0.3.31"
reqwest = "0.12.15"
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
url = "2.5.4"
