[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.3.1"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["query"] }
axum-macros = "0.5.0"
bytes = "1.10.1"
chrono = "0.4.41"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["stream"] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["raw_value"] }
sqlx = { version = "0.8.5", features = ["postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
url = "2.5.4"
